--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Business::CreditCard.
 
+0.38  Sat Sep  28 05:19:12 PDT 2019
+	- Updated tests
+	- Corrected VISA regex
+	- Updates on Discover, Maestro and UnionPay
+	- Removed 0.37 from PAUSE because it was failing tests
+
 0.37  Mon Apr  1 01:13:37 PDT 2019
 	- Added Maestro
 	- Added Dankort (5019)
@@ -16,6 +22,7 @@ Revision history for Perl extension Business::CreditCard.
 	  covered by Visa and Maestro
 	- Removed unnecessary /o modifiers from regexps
 	- Removed ' card' endings from returned types (what was the point of it?)
+	
 
 0.36  Tue Jun 14 11:36:05 PDT 2016
         - Allow (and doc) import of receipt_cardtype
