--- a/README
+++ b/README
@@ -8,11 +8,12 @@ see Business::OnlinePayment <http://www.420.am/business-onlinepayment/>
 Original author is Jon Orwant <orwant@tpj.com>, The Perl Journal and MIT
 Media Lab 
 
-Current maintainer of 0.37 (a fork of 0.36) is Lisa Shadow 
+Current maintainer of 0.38 (a fork of 0.36) is Lisa Shadow 
 <perlsrsbsns@protonmail.com>. Sorry, I had no way to open a pull request
 because couldn't find Ivan's repo anywhere and there is no contribution
 information on https://metacpan.org/contributing-to/Business-CreditCard
-Feel free to merge my commits back into your tree if you find it useful.
+His email is not working. Feel free to merge my commits back into your 
+tree if you find it useful.
 
 Current maintainer of 0.36 is Ivan Kohler <ivan-business-creditcard@420.am>.
 
